--- a/generate_parameter_library_py/package.xml
+++ b/generate_parameter_library_py/package.xml
@@ -19,7 +19,10 @@
 
   <test_depend>python3-pytest</test_depend>
 
+  <buildtool_depend>ament_cmake</buildtool_depend>
+  <buildtool_depend>ament_cmake_python</buildtool_depend>
+
   <export>
-    <build_type>ament_python</build_type>
+    <build_type>ament_cmake</build_type>
   </export>
 </package>
