--- a/generate_parameter_library_py/package.xml
+++ b/generate_parameter_library_py/package.xml
@@ -21,6 +21,7 @@
 
   <buildtool_depend>ament_cmake</buildtool_depend>
   <buildtool_depend>ament_cmake_python</buildtool_depend>
+  <buildtool_depend>hydra_cpack</buildtool_depend>
 
   <export>
     <build_type>ament_cmake</build_type>
