--- a/generate_parameter_library/CMakeLists.txt
+++ b/generate_parameter_library/CMakeLists.txt
@@ -13,3 +13,12 @@ install(
 ament_package(
   CONFIG_EXTRAS "generate_parameter_library-extras.cmake"
 )
+
+# Add hydra_cpack for deb packaging
+find_package(hydra_cpack REQUIRED)
+
+if(NOT DEFINED HYDRA_CPACK_VERSION)
+  message(FATAL_ERROR "HYDRA_CPACK_VERSION must be set for deb packaging.")
+endif()
+
+hydra_cpack_ros(VERSION ${HYDRA_CPACK_VERSION})
