--- a/generate_parameter_library_py/CMakeLists.txt
+++ b/generate_parameter_library_py/CMakeLists.txt
@@ -38,4 +38,13 @@ install(
   DESTINATION share/${PROJECT_NAME}/test
 )
 
+# Add hydra_cpack for deb packaging
+find_package(hydra_cpack REQUIRED)
+
+if(NOT DEFINED HYDRA_CPACK_VERSION)
+  message(FATAL_ERROR "HYDRA_CPACK_VERSION must be set for deb packaging.")
+endif()
+
+hydra_cpack_ros(VERSION ${HYDRA_CPACK_VERSION})
+
 ament_package()
